14617
This is current trunk of course.  It looks like it's only considering primitives in that context.

{code}
scala> Array("abc")                   
res0: Array[java.lang.String] = Array(abc)

scala> res0 sameElements Array("abc")
<console>:6: error: overloaded method value apply with alternatives (x: Unit,xs: Unit*)Array[Unit] <and> (x: Double,xs: Double*)Array[Double] <and> (x: Float,xs: Float*)Array[Float] <and> (x: Long,xs: Long*)Array[Long] <and> (x: Int,xs: Int*)Array[Int] <and> (x: Char,xs: Char*)Array[Char] <and> (x: Short,xs: Short*)Array[Short] <and> (x: Byte,xs: Byte*)Array[Byte] <and> (x: Boolean,xs: Boolean*)Array[Boolean] cannot be applied to (java.lang.String)
       res0 sameElements Array("abc")
                         ^

scala> res0 sameElements Array[String]("abc")
res2: Boolean = true
{code}
